fixed text alignment

--- a/style/custom.css
+++ b/style/custom.css
@@ -27,9 +27,7 @@ legend {
 .well-sm {
     border-radius: 10px;
 }
-p {
-    margin: 0px 20px 10.5px;
-}
+
 h4 {
     margin: 10.5px 15px 10.5px;
 }
